# guac

./: .goreleaser-verkada.yaml  BUILD.bazel  docker-compose.yml  guac-demo-compose.yaml
.github/workflows/: ci-integration.yaml  post-to-turnstile.yml  release.yaml  verkada-release.yaml  verkada-update-release.yaml
cmd/guacingest/cmd/: ingest.go
internal/testing/testdata/: testdata.go
pkg/ingestor/parser/common/: license.go  license_test.go  spdx_license_names.go
pkg/ingestor/parser/cyclonedx/: parser_cyclonedx.go  parser_cyclonedx_test.go
